--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
 
-  <body>
+  <body style="background-color: #fafafa;">
   <%= render :partial => '/partials/navbar', :remote => false%>
   <!-- <h1 class="cart-text"> -->
   <%#= render 'layouts/cart_text' %>
