--- a/app/views/menus/home.html.erb
+++ b/app/views/menus/home.html.erb
@@ -1,51 +1,37 @@
-
- <div class="parallax-container">
-    	<%= image_tag("home.jpg", :alt => "rss feed") %>
-    <div class="parallax">
-    </div>
+<div class="parallax-container center-align">
+	<h1 class="white-text mg-tp-250">South Asian Fusion Kitchen</h1>
+	<a class="waves-effect waves-light btn-large #f57c00 orange darken-2 mg-tp-50">Grab a Menu</a>
+  <div class="parallax">
+    <%= image_tag("banner-picture.jpg", :alt => "Banner Picture Of Masala") %>
   </div>
-   <div class="section grey lighten-3">
+</div>
 
- 	<div class="row container">
-    <p>Popular Items</p>
-        <div class="col s6">
-          <div class="card">
-            <div class="card-image">
-              <%= image_tag("parallax1.jpg", :alt => "rss feed") %>
-              <span class="card-title">Food Title</span>
-            </div>
-            <div class="card-content">
-              <p>Description of my food</p>
-            </div>
-            <div class="card-action">
-              <a href="#">Add to Cart</a>
-            </div>
-          </div>
-        </div>
-         <div class="col s6">
-          <div class="card">
-            <div class="card-image">
-              <%= image_tag("parallax1.jpg", :alt => "rss feed") %>
-              <span class="card-title">Food Title</span>
-            </div>
-            <div class="card-content">
-              <p>Description of food</p>
-            </div>
-            <div class="card-action">
-              <a href="#">Add to Cart</a>
-            </div>
-          </div>
-        </div>
+<div class="row mg-tp-20">
+	<div class="col s12">
+		<h4 class="center-align #f57c00 orange-text darken-2">Our Restaurants</h4>
+	</div>
+</div>
+
+<div class="container row">
+	<div class="col s12 m6">
+		<div class="card">
+      <div class="card-image">
+      	<%= image_tag("restaurant-one.jpg", :alt => "Restaurant One Picture") %>
       </div>
-
-
+      <div class="card-action center-align #f57c00 orange darken-2">
+        <a href="#" class="white-text">New York</a>
+      </div>
     </div>
+	</div>
 
-
-
-     <div class="parallax-container">
-    	<%= image_tag("home2.jpg", :alt => "rss feed") %>
-    <div class="parallax">
+	<div class="col s12 m6">
+		<div class="card">
+      <div class="card-image">
+      	<%= image_tag("restaurant-two.jpg", :alt => "Restaurant One Picture") %>
+      </div>
+      <div class="card-action center-align #f57c00 orange darken-2">
+        <a href="#" class="white-text">London</a>
+      </div>
     </div>
-  </div>
-  
+	</div>
+</div>
