--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -1,6 +1,6 @@
   <div class="fixed-action-btn">
     <a class="btn-floating btn-large red">
-      <i class="large material-icons">navigation</i>
+      <i class="large material-icons">perm_identity</i>
     </a>
     <ul >
       <!-- <li class="waves-effect waves-light blue btn-floating btn-large"><a href="#!"><i class="material-icons">assignment</i></a></li> -->
