added more design

--- a/app/views/menus/home.html.erb
+++ b/app/views/menus/home.html.erb
@@ -1,6 +1,6 @@
 <div class="parallax-container center-align">
 	<h1 class="white-text mg-tp-250">South Asian Fusion Kitchen</h1>
-	<a class="waves-effect waves-light btn-large #f57c00 orange darken-2 mg-tp-50">Grab a Menu</a>
+	<a class="waves-effect waves-light btn-large #2e7d32 green darken-3 mg-tp-50">Grab a Menu</a>
   <div class="parallax">
     <%= image_tag("banner-picture.jpg", :alt => "Banner Picture Of Masala") %>
   </div>
@@ -8,7 +8,7 @@
 
 <div class="row mg-tp-20">
 	<div class="col s12">
-		<h4 class="center-align #f57c00 orange-text darken-2">Our Restaurants</h4>
+		<h4 class="center-align #ef6c00 orange-text darken-3">Our Restaurants</h4>
 	</div>
 </div>
 
@@ -18,7 +18,7 @@
       <div class="card-image">
       	<%= image_tag("restaurant-one.jpg", :alt => "Restaurant One Picture") %>
       </div>
-      <div class="card-action center-align #f57c00 orange darken-2">
+      <div class="card-action center-align #ef6c00 orange darken-3">
         <a href="#" class="white-text">New York</a>
       </div>
     </div>
@@ -29,9 +29,45 @@
       <div class="card-image">
       	<%= image_tag("restaurant-two.jpg", :alt => "Restaurant One Picture") %>
       </div>
-      <div class="card-action center-align #f57c00 orange darken-2">
+      <div class="card-action center-align #ef6c00 orange darken-3">
         <a href="#" class="white-text">London</a>
       </div>
     </div>
 	</div>
+</div>
+
+<div class="row mg-tp-20">
+  <div class="col s12 #ef6c00 orange-text darken-3">
+    <h4 class="center-align">Browse by cuisine</h4>
+    <h6 class="center-align">choose from your favorite cuisine</h6>
+  </div>
+</div>
+
+<div class="container row center-align #ef6c00 orange-text darken-3">
+  <div class="col s12 m4">
+    <p>Hello</p>
+    <p>World</p>
+    <p>Hello</p>
+    <p>World</p>
+    <p>Hello</p>
+    <p>World</p>
+  </div>
+
+  <div class="col s12 m4">
+    <p>Hello</p>
+    <p>World</p>
+    <p>Hello</p>
+    <p>World</p>
+    <p>Hello</p>
+    <p>World</p>
+  </div>
+
+  <div class="col s12 m4">
+    <p>Hello</p>
+    <p>World</p>
+    <p>Hello</p>
+    <p>World</p>
+    <p>Hello</p>
+    <p>World</p>
+  </div>
 </div>
