--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,33 +1,46 @@
 <footer class="page-footer yellow darken-3">
-          <div class="container">
-            <div class="row">
-            <div class="col l4 s6">
-                <h5 class="white-text">CM</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">About Us</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Team</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Career</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Contact Us</a></li>
-                </ul>
-              </div>
-              <div class="col l4 s6">
-                <h5 class="white-text">Curry Masala</h5>
-                <p class="grey-text text-lighten-4">Remember us for authentic continental foods </p>
-              </div>
-              <div class="col l4  s6">
-                <h5 class="white-text">Social Media</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Facebook</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Instagram</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Twitter</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="footer-copyright">
-            <div class="container">
-            © <%=Date.today.year %>Copyright CM
-            <!-- <a class=  "grey-text text-lighten-4 right" href="#!">More Links</a> -->
-            </div>
-          </div>
-        </footer>
+  <div class="container">
+    <div class="row">
+      <div class="col s12 white-text center-align">
+        <h5>Curry Masala</h5>
+      </div>
+    </div>
+
+    <div class="row white-text center-align">
+      <div class="col s6 push-s3">
+        <a class="grey-text text-lighten-3" href="#!">About Us</a>
+        <span>|</span>
+        <a class="grey-text text-lighten-3" href="#!">Contact Us</a>
+        <span>|</span>
+        <a class="grey-text text-lighten-3" href="#!">Team</a>
+        <span>|</span>
+        <a class="grey-text text-lighten-3" href="#!">Career</a>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col s6">
+        <p class="grey-text text-lighten-4">Remember us for authentic continental foods </p>
+      </div>
+      <div class="col s6 white-text center-align">
+        <div class="col s12">
+          <h5>Connect with us</h5>
+        </div>
+        <div class="col s4">
+          Facebook  
+        </div>
+        <div class="col s4">
+          Google
+        </div>
+        <div class="col s4">
+          Twitter
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container">
+    © <%=Date.today.year %>Copyright CM
+    </div>
+  </div>
+</footer>
