--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -23,23 +23,20 @@
         <p class="grey-text text-lighten-4">Remember us for authentic continental foods </p>
       </div>
       <div class="col s6 white-text center-align">
-        <div class="col s12">
-          <h5>Connect with us</h5>
+        <div class="col s2 offset-s6">
+          <i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i>
         </div>
-        <div class="col s4">
-          Facebook  
+        <div class="col s2">
+          <i class="fa fa-google fa-3x" aria-hidden="true"></i>
         </div>
-        <div class="col s4">
-          Google
-        </div>
-        <div class="col s4">
-          Twitter
+        <div class="col s2">
+          <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
         </div>
       </div>
     </div>
   </div>
   <div class="footer-copyright">
-    <div class="container">
+    <div class="container center-align">
     © <%=Date.today.year %>Copyright CM
     </div>
   </div>
