--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="#2e7d32 green darken-3">
+<nav class="#37474f blue-grey darken-3">
   <div class="container">
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">
