--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,5 +1,17 @@
-<footer class="page-footer yellow darken-3">
+<footer class="page-footer color-two-background mg-tp-20">
   <div class="container">
+    <div class="row mg-tp-20 center-align">
+      <div class="col s12 white-text mg-bt-20">
+        <h4>Subscribe to our newsletter</h4>
+      </div>
+      <div class="input-field col s4 offset-s3">
+        <input type="email" class="newsletter-form" placeholder="Enter Your Email">
+      </div>
+      <div class="col s2">
+        <a class="waves-effect waves-light btn-large color-three-background">Subscribe</a>
+      </div>
+    </div>
+
     <div class="row">
       <div class="col s12 white-text center-align">
         <h5>Curry Masala</h5>
