--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,8 +1,8 @@
-<nav class="#37474f blue-grey darken-3">
+<nav class="color-one-background">
   <div class="container">
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">
-        Curry Masala
+        <%= image_tag("logo.jpg", :alt => "Restaurant Logo", height: 64) %>
       </a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="">Menu</a></li>
