--- a/app/views/menus/home.html.erb
+++ b/app/views/menus/home.html.erb
@@ -2,7 +2,7 @@
 	<h2 class="white-text mg-tp-250">South Asian Fusion Kitchen</h2>
   <div class="row mg-tp-50">
     <div class="input-field col s3 offset-s4">
-      <input type="email" class="newsletter-form" placeholder="Enter Your Email">
+      <input type="text" class="search-form" placeholder="Search">
     </div>
     <div class="col s1">
       <a class="waves-effect waves-light btn-large color-three-background">
