rails code integrated

--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,14 +1,25 @@
 <nav class="color-one-background">
   <div class="container">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">
-        <%= image_tag("logo.jpg", :alt => "Restaurant Logo", height: 64) %>
-      </a>
+      <%= link_to image_tag("logo.jpg", :alt => "Restaurant Logo", height: 64), root_path %>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="">Menu</a></li>
+        <li><%= link_to 'Menu', menus_path %></li>
         <li><a href="">Contact</a></li>
-        <li><a href="">Login</a></li>
-        <li><a href="">Sign Up</a></li>
+        <% if user_signed_in? %>
+          <li>
+            <%= link_to 'LogOut', destroy_user_session_path, method: :delete %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to 'Login', new_user_session_path %>  
+          </li>
+          <li>
+            <%= link_to 'Sign Up', new_user_registration_path %>
+          </li>
+        <% end %>
+        <li class="cart-text">
+          <%= link_to '<i class="small material-icons left">shopping_cart</i>'.html_safe + " #{current_order.order_items.sum{|a| a.quantity}}", cart_path %>
+        </li>
       </ul>
     </div>
   </div>
