added more content on cards

--- a/app/views/menus/home.html.erb
+++ b/app/views/menus/home.html.erb
@@ -23,22 +23,30 @@
 
 <div class="container row">
 	<div class="col s12 m6">
-		<div class="card color-three-background">
+		<div class="card">
       <div class="card-image">
       	<%= image_tag("restaurant-one.jpg", :alt => "Restaurant One Picture") %>
       </div>
-      <div class="card-action center-align">
+      <div class="card-content color-three-text">
+        <p>I am a very simple card. I am good at containing small bits of information.
+        I am convenient because I require little markup to use effectively.</p>
+      </div>
+      <div class="card-action center-align color-three-background">
         <a href="#" class="white-text">New York</a>
       </div>
     </div>
 	</div>
 
 	<div class="col s12 m6">
-		<div class="card color-three-background">
+		<div class="card">
       <div class="card-image">
       	<%= image_tag("restaurant-two.jpg", :alt => "Restaurant One Picture") %>
       </div>
-      <div class="card-action center-align">
+      <div class="card-content color-three-text">
+        <p>I am a very simple card. I am good at containing small bits of information.
+        I am convenient because I require little markup to use effectively.</p>
+      </div>
+      <div class="card-action center-align color-three-background">
         <a href="#" class="white-text">London</a>
       </div>
     </div>
