--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container mg-tp-50 mg-bt-50">
   <div class="container section z-depth-3">
-    <div class= "row">
+    <div class= "row center-align color-three-text">
       <div class="input-field col s12">
-      <h4> Sign up </h4>
+        <h4> Sign up </h4>
       </div>
     </div>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -42,7 +42,7 @@
 
       <div class="row">
         <div class="input-field col s12">
-          <%= f.submit "Sign up",  :class => 'btn waves-effect waves-light' %>
+          <%= f.submit "Sign up",  :class => 'btn waves-effect waves-light color-three-background' %>
         </div>
       </div>
     <% end %>
