--- a/app/views/menus/home.html.erb
+++ b/app/views/menus/home.html.erb
@@ -1,10 +1,10 @@
 <div class="parallax-container center-align">
 	<h2 class="white-text mg-tp-250">South Asian Fusion Kitchen</h2>
   <div class="row mg-tp-50">
-    <div class="input-field col s3 offset-s4">
+    <div class="input-field col l3 s12 offset-l4">
       <input type="text" class="search-form" placeholder="Search">
     </div>
-    <div class="col s1">
+    <div class="col l1 s12">
       <a class="waves-effect waves-light btn-large color-three-background">
         <i class="large material-icons">search</i>
       </a>
