--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,8 +1,31 @@
 <nav class="color-one-background">
   <div class="container">
     <div class="nav-wrapper">
-      <%= link_to image_tag("logo.jpg", :alt => "Restaurant Logo", height: 64), root_path %>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <%= link_to image_tag("logo.jpg", :alt => "Restaurant Logo", height: 64), root_path, class: "brand-logo" %>
+      <a href="#" data-activates="sidebar" class="button-collapse pull-right"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><%= link_to 'Menu', menus_path %></li>
+        <li><a href="#">Contact</a></li>
+        <% if user_signed_in? %>
+          <li>
+            <%= link_to 'LogOut', destroy_user_session_path, method: :delete %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to 'Login', new_user_session_path %>  
+          </li>
+          <li>
+            <%= link_to 'Sign Up', new_user_registration_path %>
+          </li>
+        <% end %>
+        <li class="cart-text">
+          <%= link_to '<i class="small material-icons left">shopping_cart</i>'.html_safe + " #{current_order.order_items.sum{|a| a.quantity}}", cart_path %>
+        </li>
+      </ul>
+      <ul class="side-nav center-align" id="sidebar">
+        <li class="mg-tp-50 mg-bt-20">
+          <%= link_to image_tag("logo.jpg", :alt => "Restaurant Logo", height: 64), root_path %>
+        </li>
         <li><%= link_to 'Menu', menus_path %></li>
         <li><a href="">Contact</a></li>
         <% if user_signed_in? %>
@@ -18,7 +41,7 @@
           </li>
         <% end %>
         <li class="cart-text">
-          <%= link_to '<i class="small material-icons left">shopping_cart</i>'.html_safe + " #{current_order.order_items.sum{|a| a.quantity}}", cart_path %>
+          <%= link_to "Cart #{current_order.order_items.sum{|a| a.quantity}}", cart_path %>
         </li>
       </ul>
     </div>
