--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -1,13 +1,12 @@
-.newsletter-form, .search-form {
-	margin-top: -15px !important; 
+.normal-form {
 	border: 2px white solid !important;
 	background-color: white !important;
 	padding: 3px 25px !important;
 	border-radius: 2px !important;
-	width: 250px !important;
+	width: auto !important;
 }
 
-.newsletter-form:focus:not([readonly]), .search-form:focus:not([readonly]) {
+.normal-form:focus:not([readonly]) {
 	border-bottom: 2px white solid !important;
 	box-shadow: none !important;
 }
