--- a/app/assets/stylesheets/modules/_margin.scss
+++ b/app/assets/stylesheets/modules/_margin.scss
@@ -13,3 +13,11 @@
 .mg-bt-20 {
 	margin-bottom: 20px;
 }
+
+.mg-bt-50 {
+	margin-bottom: 50px;
+}
+
+.mg-tp-ng-15 {
+	margin-top: -15px !important;
+}
