--- a/app/views/menus/home.html.erb
+++ b/app/views/menus/home.html.erb
@@ -2,7 +2,7 @@
 	<h2 class="white-text mg-tp-250">South Asian Fusion Kitchen</h2>
   <div class="row mg-tp-50">
     <div class="input-field col l3 s12 offset-l4">
-      <input type="text" class="search-form" placeholder="Search">
+      <input type="text" class="normal-form mg-tp-ng-15" placeholder="Search">
     </div>
     <div class="col l1 s12">
       <a class="waves-effect waves-light btn-large color-three-background">
