--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -5,7 +5,7 @@
         <h4>Subscribe to our newsletter</h4>
       </div>
       <div class="input-field col l4 s12 offset-l3">
-        <input type="email" class="newsletter-form" placeholder="Enter Your Email">
+        <input type="email" class="normal-form mg-tp-ng-15" placeholder="Enter Your Email">
       </div>
       <div class="col l2 s12">
         <a class="waves-effect waves-light btn-large color-three-background">Subscribe</a>
@@ -20,9 +20,9 @@
 
     <div class="row white-text center-align">
       <div class="col s6 push-s3">
-        <a class="white-text" href="#!">About Us</a>
+        <%= link_to 'About Us', about_us_pages_path, class: "white-text" %>
         <span>|</span>
-        <a class="white-text" href="#!">Contact Us</a>
+        <%= link_to 'Contact', contact_pages_path, class: "white-text" %>
         <span>|</span>
         <a class="white-text" href="#!">Team</a>
         <span>|</span>
