--- a/app/assets/stylesheets/modules/margin.scss
+++ b/app/assets/stylesheets/modules/margin.scss
@@ -1,3 +1,7 @@
+.no-margin {
+	margin: 0;
+}
+
 .no-mg-rt {
 	margin-right: 0;
 }
@@ -10,6 +14,22 @@
 	margin-top: 50px;
 }
 
+.mg-tp-200 {
+	margin-top: 200px;
+}
+
 .mg-tp-250 {
 	margin-top: 250px;
+}
+
+.mg-tp-05rem {
+	margin-top: 0.5rem;
+}
+
+.mg-bt-075rem {
+	margin-bottom: 0.75rem;
+}
+
+.mg-bt-1rem {
+	margin-bottom: 1rem;
 }
