--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,4 +23,18 @@
       <%= yield %>
    <%= render :partial => '/partials/footer' %>   
   </body>
+
+  <script>
+    $('.datepicker').pickadate({
+      selectMonths: true, // Creates a dropdown to control month
+      selectYears: 15 // Creates a dropdown of 15 years to control year
+      });
+
+    $('#timepicker').pickatime({
+      autoclose: false,
+      twelvehour: true,
+      default: '08:30:00'
+    });
+  </script>
+
 </html>
