--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,104 +1,317 @@
-<p id="notice"><%= notice %></p>   
+<p id="notice" class="no-margin"><%= notice %></p>
 <%#= link_to 'New Menu', new_menu_path %> 
 
-<div class="row">
-  <div class="col s12 m8 push-m2">
-    <div class="row">
-      <div class="col section s12">
-        <h4>Our Menus</h4>
+<div class="parallax-container">
+  <div class="parallax"><%= image_tag("menu-paralax-img.jpg") %></div>
+  <div class="container">
+    <div class="row center-align txt-white">
+      <div class="col s12 mg-tp-200">
+        <h1>Our menus</h1>
       </div>
     </div>
-    <!-- <p>Menus</p>? -->
-
-    <ul class="collapsible col s12 no-padding" data-collapsible="accordion">
-
-      <li>
-        <div class="collapsible-header green darken-2 brd-gr-d3 txt-white"><i class="material-icons">local_dining</i>Entree<span class="old badge">2 items</span></div>
-        <div class="collapsible-body">
-        <!-- Collections of items -->
-          <ul class="collection">
-            <li class="collection-item avatar">
-              <%= image_tag("spagetti.jpg", class: 'circle') %>
-              <span class="title">Spagetti bolognese</span>
-              <p>Description.<br>
-                 Second Line.
-              </p>
-              <a href="#!" class="secondary-content">
-                <span class="badge"><i class="small material-icons left no-mg-rt">shopping_cart</i></span>
-                <span class="new badge" data-badge-caption="€">1.5</span>
-              </a>
-            </li>
-            <li class="collection-item avatar">
-              <%= image_tag("steak.jpg", class: 'circle') %>
-              <span class="title">Steak</span>
-              <p>Description.<br>
-                 Second Line.
-              </p>
-              <a href="#!" class="secondary-content">
-                <span class="badge"><i class="small material-icons left no-mg-rt">shopping_cart</i></span>
-                <span class="new badge" data-badge-caption="€">2.5</span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </li>
-
-      <li>
-        <div class="collapsible-header green darken-2 brd-gr-d3 txt-white"><i class="material-icons">local_dining</i>Desserts<span class="old badge">2 items</span></div>
-        <div class="collapsible-body">
-        <!-- Collections of items -->
-          <ul class="collection">
-            <li class="collection-item avatar">
-              <%= image_tag("gulab_jamun.jpg", class: 'circle') %>
-              <span class="title">Gulab Jamun</span>
-              <p>Description.<br>
-                 Second Line.
-              </p>
-              <a href="#!" class="secondary-content">
-                <span class="badge"><i class="small material-icons left no-mg-rt">shopping_cart</i></span>
-                <span class="new badge" data-badge-caption="€">1.5</span>
-              </a>
-            </li>
-            <li class="collection-item avatar">
-              <%= image_tag("jalibe.jpg", class: 'circle') %>
-              <span class="title">Jalibe</span>
-              <p>Description.<br>
-                 Second Line.
-              </p>
-              <a href="#!" class="secondary-content">
-                <span class="badge"><i class="small material-icons left no-mg-rt">shopping_cart</i></span>
-                <span class="new badge" data-badge-caption="€">1.5</span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </li>
-
-      <li>
-        <div class="collapsible-header green darken-2 brd-gr-d3 txt-white"><i class="material-icons">local_dining</i>Third<span class="old badge">0 item</span></div>
-        <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-      </li>
-
-    </ul>
-    <!-- Grey navigation panel -->
   </div>
 </div>
 
-<!-- <table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="container mg-tp-20">
+  <div class="row">
+    <!-- Menus section -->
+    <div class="col s12 m8">
+      <div class="row ">
+      <!-- Categories -->
+        <div class="col s12 m4">
+          <div class="row">
+          <!-- List of catefories -->
+            <div class="collection">
+              <a class="collection-item" onclick="jump('maindishes')">
+                <span class="badge right">4 items</span>
+                Main dishes
+              </a>
+              <a class="collection-item" onclick="jump('steak')">
+                <span class="badge right">2 items</span>
+                Steak
+              </a>
+              <a class="collection-item" onclick="jump('soups')">
+                <span class="badge right">5 items</span>
+                Soups
+              </a>
+              <a class="collection-item" onclick="jump('desserts')">
+                <span class="badge right">2 items</span>
+                Desserts
+              </a>
+            </div>
+          </div>
+        </div>
 
-  <tbody>
-    <%# @menus.each do |menu| %>
-      <tr>
-      <td><%#= menu.title %></td>
-        <td><%#= link_to 'Show', menu %></td>
-        <td><%#= link_to 'Edit', edit_menu_path(menu) %></td>
-        <td><%#= link_to 'Destroy', menu, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <%# end %>
-  </tbody>
-</table> -->
+        <!-- Lists of items -->
+        <div class="col s12 m8">
+          <div class="row pd-tp-05rem brd-rt-cd">
+            <!-- Item sections -->
+            <div id="maindishes">
+              
+              <div class="col s12">
+                <span class="title"><h5>Main Dishes</h5><div class="divider"></div></span>
+              </div>
+              <div class="col m6 s12 mg-tp-05rem mg-bt-1rem center-align">
+                <div class="col s12 bg-white z-depth-1">
+                  <%= image_tag("spagetti.jpg", class: "col s12 pd-tp-05rem no-padding") %>
+                  <div class="item-detail col s12 no-padding">
+                    <span class="title">Spagetti bolognese</span>
+                    <p class="description">Description 1.<br>Description 2.</p>
+                  </div>
+                  <div class="item-price col s12 no-padding mg-bt-075rem">
+                    <a href="#" class="col s4 push-s4 no-padding">
+                      <span class="new badge left" style="margin: 0;" data-badge-caption="€">2.5</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="col m6 s12 mg-tp-05rem mg-bt-1rem center-align">
+                <div class="col s12 bg-white z-depth-1">
+                  <%= image_tag("spagetti.jpg", class: "col s12 pd-tp-05rem no-padding") %>
+                  <div class="item-detail col s12 no-padding">
+                    <span class="title">Spagetti bolognese</span>
+                    <p class="description">Description 1.<br>Description 2.</p>
+                  </div>
+                  <div class="item-price col s12 no-padding mg-bt-075rem">
+                    <a href="#" class="col s4 push-s4 no-padding">
+                      <span class="new badge left" style="margin: 0;" data-badge-caption="€">2.5</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="col m6 s12 mg-tp-05rem mg-bt-1rem center-align">
+                <div class="col s12 bg-white z-depth-1">
+                  <%= image_tag("spagetti.jpg", class: "col s12 pd-tp-05rem no-padding") %>
+                  <div class="item-detail col s12 no-padding">
+                    <span class="title">Spagetti bolognese</span>
+                    <p class="description">Description 1.<br>Description 2.</p>
+                  </div>
+                  <div class="item-price col s12 no-padding mg-bt-075rem">
+                    <a href="#" class="col s4 push-s4 no-padding">
+                      <span class="new badge left" style="margin: 0;" data-badge-caption="€">2.5</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col m6 s12 mg-tp-05rem mg-bt-1rem center-align">
+                <div class="col s12 bg-white z-depth-1">
+                  <%= image_tag("spagetti.jpg", class: "col s12 pd-tp-05rem no-padding") %>
+                  <div class="item-detail col s12 no-padding">
+                    <span class="title">Spagetti bolognese</span>
+                    <p class="description">Description 1.<br>Description 2.</p>
+                  </div>
+                  <div class="item-price col s12 no-padding mg-bt-075rem">
+                    <a href="#" class="col s4 push-s4 no-padding">
+                      <span class="new badge left" style="margin: 0;" data-badge-caption="€">2.5</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              
+            </div><br clear="all">
+            
+            <div id="steak">
+              
+              <div class="col s12">
+                <span class="title"><h5>Steak</h5><div class="divider"></div></span>
+              </div>
+              <div class="col m6 s12 mg-tp-05rem mg-bt-1rem center-align">
+                <div class="col s12 bg-white z-depth-1">
+                  <%= image_tag("steak.jpg", class: "col s12 pd-tp-05rem no-padding") %>
+                  <div class="item-detail col s12 no-padding">
+                    <span class="title">Steak</span>
+                    <p class="description">Description 1.<br>Description 2.</p>
+                  </div>
+                  <div class="item-price col s12 no-padding mg-bt-075rem">
+                    <a href="#" class="col s4 push-s4 no-padding">
+                      <span class="new badge left" style="margin: 0;" data-badge-caption="€">2.5</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="col m6 s12 mg-tp-05rem mg-bt-1rem center-align">
+                <div class="col s12 bg-white z-depth-1">
+                  <%= image_tag("steak.jpg", class: "col s12 pd-tp-05rem no-padding") %>
+                  <div class="item-detail col s12 no-padding">
+                    <span class="title">Steak</span>
+                    <p class="description">Description 1.<br>Description 2.</p>
+                  </div>
+                  <div class="item-price col s12 no-padding mg-bt-075rem">
+                    <a href="#" class="col s4 push-s4 no-padding">
+                      <span class="new badge left" style="margin: 0;" data-badge-caption="€">2.5</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              
+            </div><br clear="all">
+            
+            <div id="soups">
+              
+              <div class="col s12">
+                <span class="title"><h5>Soups</h5><div class="divider"></div></span>
+              </div>
+              <div class="col m6 s12 mg-tp-05rem mg-bt-1rem center-align">
+                <div class="col s12 bg-white z-depth-1">
+                  <%= image_tag("soup.jpg", class: "col s12 pd-tp-05rem no-padding") %>
+                  <div class="item-detail col s12 no-padding">
+                    <span class="title">Soup</span>
+                    <p class="description">Description 1.<br>Description 2.</p>
+                  </div>
+                  <div class="item-price col s12 no-padding mg-bt-075rem">
+                    <a href="#" class="col s4 push-s4 no-padding">
+                      <span class="new badge left" style="margin: 0;" data-badge-caption="€">2.5</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="col m6 s12 mg-tp-05rem mg-bt-1rem center-align">
+                <div class="col s12 bg-white z-depth-1">
+                  <%= image_tag("soup.jpg", class: "col s12 pd-tp-05rem no-padding") %>
+                  <div class="item-detail col s12 no-padding">
+                    <span class="title">Soup</span>
+                    <p class="description">Description 1.<br>Description 2.</p>
+                  </div>
+                  <div class="item-price col s12 no-padding mg-bt-075rem">
+                    <a href="#" class="col s4 push-s4 no-padding">
+                      <span class="new badge left" style="margin: 0;" data-badge-caption="€">2.5</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="col m6 s12 mg-tp-05rem mg-bt-1rem center-align">
+                <div class="col s12 bg-white z-depth-1">
+                  <%= image_tag("soup.jpg", class: "col s12 pd-tp-05rem no-padding") %>
+                  <div class="item-detail col s12 no-padding">
+                    <span class="title">Soup</span>
+                    <p class="description">Description 1.<br>Description 2.</p>
+                  </div>
+                  <div class="item-price col s12 no-padding mg-bt-075rem">
+                    <a href="#" class="col s4 push-s4 no-padding">
+                      <span class="new badge left" style="margin: 0;" data-badge-caption="€">2.5</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col m6 s12 mg-tp-05rem mg-bt-1rem center-align">
+                <div class="col s12 bg-white z-depth-1">
+                  <%= image_tag("soup.jpg", class: "col s12 pd-tp-05rem no-padding") %>
+                  <div class="item-detail col s12 no-padding">
+                    <span class="title">Soup</span>
+                    <p class="description">Description 1.<br>Description 2.</p>
+                  </div>
+                  <div class="item-price col s12 no-padding mg-bt-075rem">
+                    <a href="#" class="col s4 push-s4 no-padding">
+                      <span class="new badge left" style="margin: 0;" data-badge-caption="€">2.5</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col m6 s12 mg-tp-05rem mg-bt-1rem center-align">
+                <div class="col s12 bg-white z-depth-1">
+                  <%= image_tag("soup.jpg", class: "col s12 pd-tp-05rem no-padding") %>
+                  <div class="item-detail col s12 no-padding">
+                    <span class="title">Soup</span>
+                    <p class="description">Description 1.<br>Description 2.</p>
+                  </div>
+                  <div class="item-price col s12 no-padding mg-bt-075rem">
+                    <a href="#" class="col s4 push-s4 no-padding">
+                      <span class="new badge left" style="margin: 0;" data-badge-caption="€">2.5</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              
+            </div><br clear="all">
+            
+            <div id="desserts">
+              
+              <div class="col s12">
+                <span class="title">Desserts<div class="divider"></div></span>
+              </div>
+              <div class="col m6 s12 mg-tp-05rem mg-bt-1rem center-align">
+                <div class="col s12 bg-white z-depth-1">
+                  <%= image_tag("gulab_jamun.jpg", class: "col s12 pd-tp-05rem no-padding") %>
+                  <div class="item-detail col s12 no-padding">
+                    <span class="title">Gulab Jamun</span>
+                    <p class="description">Description 1.<br>Description 2.</p>
+                  </div>
+                  <div class="item-price col s12 no-padding mg-bt-075rem">
+                    <a href="#" class="col s4 push-s4 no-padding">
+                      <span class="new badge left" style="margin: 0;" data-badge-caption="€">2.5</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="col m6 s12 mg-tp-05rem mg-bt-1rem center-align">
+                <div class="col s12 bg-white z-depth-1">
+                  <%= image_tag("gulab_jamun.jpg", class: "col s12 pd-tp-05rem no-padding") %>
+                  <div class="item-detail col s12 no-padding">
+                    <span class="title">Gulab Jamun</span>
+                    <p class="description">Description 1.<br>Description 2.</p>
+                  </div>
+                  <div class="item-price col s12 no-padding mg-bt-075rem">
+                    <a href="#" class="col s4 push-s4 no-padding">
+                      <span class="new badge left" style="margin: 0;" data-badge-caption="€">2.5</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Cart section -->
+    <div class="col s12 m4">
+      <div class="row">
+        <div class="col s12">
+          <ul class="collection center-align">
+            <li class="collection-item">
+              <p class="bold"><i class="material-icons no-margin" style="vertical-align: top;">shopping_cart</i>Your Order</p>
+              <p>2 items added to your cart.</p>
+            </li>
+            <li class="collection-item">
+              <p class="bold"><i class="material-icons no-margin" style="vertical-align: top;">drive_eta</i>Delivery Details</p>
+              <p>Delivery distance: (Distance from resturant to ordered place)</p>
+              <p>Delivery Est: 1 Hrs</p>
+              <p>Delivery Distance Covered: (...)</p>
+              <p>Delivery Fee: Free</p>
+            </li>
+            <li class="collection-item">
+              <p class="bold"><i class="material-icons no-margin" style="vertical-align: top;">drive_eta</i>Delivery Options</p>
+              <div class="input-field">
+                <select class="browser-default">
+                  <option value="" disabled selected>Choose your option</option>
+                  <option value="1">Delivery</option>
+                  <option value="2">Pick Up</option>
+                </select>
+              </div>
+              <div class="input-field">
+                <input type="date" class="datepicker" placeholder="Date">
+              </div>
+              <!-- <div class="input-field">
+                <input id="timepicker" data-default="08:30:00" class="timepicker" type="time" placeholder="Time">
+              </div> -->
+              <p>
+                <input type="checkbox" class="filled-in" id="filled-in-box" />
+                <label for="filled-in-box">Deliver ASAP ?</label>
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div> 
+</div>
