--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -4,6 +4,7 @@
 	padding: 3px 25px !important;
 	border-radius: 2px !important;
 	width: auto !important;
+	min-width: 250px;
 }
 
 .normal-form:focus:not([readonly]) {
