--- a/app/views/menus/home.html.erb
+++ b/app/views/menus/home.html.erb
@@ -10,7 +10,7 @@
       </a>
     </div>
   </div>
-  <div class="parallax">
+  <div class="parallax blur">
     <%= image_tag("banner-picture.jpg", :alt => "Banner Picture Of Masala") %>
   </div>
 </div>
@@ -93,6 +93,6 @@
   <div class="col s12 color-three-text center-align">
     <h4>Grab Curry Masala in your mobile!</h4>
     <h6>Get our app, its the fastest way to order food on the go.</h6>
-    <%= image_tag("google.png", :alt => "Get it on google play", height: 80, class: 'mg-tp-20') %>
+    <%= image_tag("google.png", :alt => "Get it on google play", height: 80, class: 'mg-tp-50 mg-bt-50') %>
   </div>
 </div>
