--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -3,33 +3,36 @@
 	<p><i class="tiny material-icons">location_on</i> Soi Chaloem Prakiat Thi 9,Soi 53, House 510,Bangkok, Thailand</p>
 	<p><i class="tiny material-icons">stay_current_portrait</i> +66-(0)20774870</p>
 	<p><i class="tiny material-icons">message</i> info@currymasala.com</p>
-  <div class="parallax blur-3px">
+  <div class="parallax blur">
 		<%= image_tag("food-image-one.jpeg", :alt => "Banner Picture Of Food") %>
 	</div>
 </div>
 
-<div class="container row mg-tp-50 mg-bt-50">
-	<div class="col s12 l7">
-		<h4>Contact Curry Masala</h4>
-		<p>We are always happy to hear from our clients and visitors, you may contact us anytime</p>
-		<p>Soi Chaloem Prakiat Thi 9 , Soi 53</p>
-		<p>House 510, Prawet 10250</p>
-		<p>Postcode: 10250</p>
-		<p>Bangkok , Thailand</p>
-		<p>Tel:+66-(0)20774870</p>
-		<p>Email:info@grabhalal.com</p>
-	</div>
-	<div class="col s12 l5 color-one-background center-align">
-		<div class="mg-tp-50 mg-bt-50">
-			<input type="text" class="normal-form" placeholder="Name">
-			<input type="email" class="normal-form" placeholder="Email">
-			<input type="number" class="normal-form" placeholder="Phone">
-			<input type="text" class="normal-form" placeholder="Country">
-			<input type="text" class="normal-form" placeholder="Message">
-			<br>
-			<a class="waves-effect waves-light btn-large color-three-background">
-				Submit
-			</a>
+<div class="container row mg-bt-50">
+	<div id="googlemaps"></div>
+	<div id="contactform" class="pd-tp-70">
+		<div class="col s12 l7 contact-detail mg-tp-50">
+			<h4 class="mg-tp-50">Contact Curry Masala</h4>
+			<p>We are always happy to hear from our clients and visitors, you may contact us anytime</p>
+			<p>Soi Chaloem Prakiat Thi 9 , Soi 53</p>
+			<p>House 510, Prawet 10250</p>
+			<p>Postcode: 10250</p>
+			<p>Bangkok , Thailand</p>
+			<p>Tel:+66-(0)20774870</p>
+			<p class="mg-bt-50">Email:info@grabhalal.com</p>
+		</div>
+		<div class="col s12 l5 color-one-background center-align">
+			<div class="mg-tp-50 mg-bt-50">
+				<input type="text" class="normal-form" placeholder="Name">
+				<input type="email" class="normal-form" placeholder="Email">
+				<input type="number" class="normal-form" placeholder="Phone">
+				<input type="text" class="normal-form" placeholder="Country">
+				<input type="text" class="normal-form" placeholder="Message">
+				<br>
+				<a class="waves-effect waves-light btn-large color-three-background">
+					Submit
+				</a>
+			</div>
 		</div>
 	</div>
 </div>
