--- a/app/assets/stylesheets/modules/_margin.scss
+++ b/app/assets/stylesheets/modules/_margin.scss
@@ -6,6 +6,14 @@
 	margin-top: 50px;
 }
 
+.mg-tp-70 {
+	margin-top: 70px;
+}
+
+.mg-tp-150 {
+	margin-top: 150px;
+}
+
 .mg-tp-250 {
 	margin-top: 250px;
 }
