updated more UI

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -8,9 +8,9 @@
 	</div>
 </div>
 
-<div class="container row mg-bt-50">
+<div class="row">
 	<div id="googlemaps"></div>
-	<div id="contactform" class="pd-tp-70">
+	<div id="contactform" class="container pd-tp-50">
 		<div class="col s12 l7 contact-detail mg-tp-50">
 			<h4 class="mg-tp-50">Contact Curry Masala</h4>
 			<p>We are always happy to hear from our clients and visitors, you may contact us anytime</p>
