--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -1,6 +1,6 @@
 <div class="parallax-container center-align white-text small-banner">
 	<h1>About Us</h1>
-  <div class="parallax blur-3px">
+  <div class="parallax blur">
 		<%= image_tag("food-image-one.jpeg", :alt => "Banner Picture Of Food") %>
 	</div>
 </div>
