--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -8,7 +8,7 @@
 	</div>
 </div>
 
-<div class="row mg-bt-100">
+<div class="row">
 	<div id="googlemaps"></div>
 	<div id="contactform" class="container pd-tp-50">
 		<div class="col s12 l7 contact-detail mg-tp-50">
