--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,14 +1,10 @@
 <p id="notice" class="no-margin"><%= notice %></p>
 <%#= link_to 'New Menu', new_menu_path %> 
 
-<div class="parallax-container">
-  <div class="parallax"><%= image_tag("menu-paralax-img.jpg") %></div>
-  <div class="container">
-    <div class="row center-align txt-white">
-      <div class="col s12 mg-tp-200">
-        <h1>Our menus</h1>
-      </div>
-    </div>
+<div class="parallax-container menu-banner">
+  <h1 class="white-text center-align">Our menus</h1>
+  <div class="parallax">
+    <%= image_tag("menu-paralax-img.jpg") %>
   </div>
 </div>
 
