--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,6 +1,11 @@
 .parallax-container {
-  height: 650px;
+  height: 500px !important;
 }
+
+.menu-banner {
+  height: 150px !important;
+}
+
 
 .bg-white {
 	background-color: #ffffff;
